--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cors_api
-description: A simple command-line application.
+description: A cors-proxy command-line application.
 version: 1.0.0
 # homepage: https://www.example.com
 
