--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,42 +1,42 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+# This is a basic workflow to help you get started with Actions
 
-name: Dart
+name: CI Building native server
 
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ master ]
+    branches: [ LucasMW-patch-1 ]
   pull_request:
-    branches: [ master ]
+    branches: [ LucasMW-patch-1 ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+        include:
+          - os: ubuntu-latest
+            output-name: server-linux
+          - os: macOS-latest
+            output-name: server-mac
+          - os: windows-latest
+            output-name: server-windows.exe
     steps:
-      - uses: actions/checkout@v2
-
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
-
-      - name: Install dependencies
-        run: dart pub get
-
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
-
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: dart test
+          - uses: actions/checkout@v2
+          - uses: dart-lang/setup-dart@v1.3
+          - name: Install dependencies
+            run: dart pub get
+          - run: mkdir build
+          - name: Install Dependencies
+            run: dart pub get
+          - run: dart compile exe ./bin/cors_api.dart -v -o build/${{ matrix.output-name }}
+          - uses: actions/upload-artifact@v1
+            with:
+                name: native-executables
+                path: build
