--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -6,9 +6,9 @@ name: CI Building native server
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ LucasMW-patch-1 ]
+    branches: [ master ]
   pull_request:
-    branches: [ LucasMW-patch-1 ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
